Wed Aug 20 14:03:41 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* disk-pager.c (service_paging_requests): New args for
	ports_manage_port_operations_multithread. 
	* init-first.c (master_thread_function): Likewise.

1997-08-19  Miles Bader  <miles@gnu.ai.mit.edu>

	* filedev.c, machdev.c: Files removed.

Thu Jul 24 12:57:26 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* name-cache.c (find_cache): Grammar doc fix.

1997-07-10  Miles Bader  <miles@gnu.ai.mit.edu>

	* opts-std-runtime.c (parse_opt): Turn off synchronous mode when
	setting a sync interval.

Mon Jul  7 16:25:49 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* file-exec.c: Include <fcntl.h> instead of <fcntlbits.h>.
  	Suggested by Marcus G. Daniels (marcus@cathcart.sysc.pdx.edu).

Mon Jun 30 17:26:38 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* diskfs.h (diskfs_hard_readonly): New variable.
	(diskfs_readonly): Doc change.
	* readonly.c (diskfs_readonly): Provide initialized declaration.
	(diskfs_check_readonly): If we cannot write the media and so we
	switch to readonly, set diskfs_hard_readonly too.
	(diskfs_set_readonly): If diskfs_hard_readonly is set, then
	inhibit any attempt to clear readonly status.

1997-06-23  Miles Bader  <miles@gnu.ai.mit.edu>

	* peropen-make.c (diskfs_make_peropen): Initialize the
	ROOT_PARENT, SHADOW_ROOT, and SHADOW_ROOT_PARENT fields.

1997-06-09  Miles Bader  <miles@gnu.ai.mit.edu>

	* io-stat.c (diskfs_S_io_stat): Use fshelp_translated rather than
	fshelp_fetch_control.

Fri Jun  6 11:42:14 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile (LCLHDRS): Add fhandle.h.

Tue May 27 11:55:56 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* file-chmod.c (diskfs_S_file_chmod): Turn off S_ITRANS bits too.

Mon Feb 24 17:22:05 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* io-identity.c (diskfs_S_io_identity): Pass CRED's shadow root
	inode number to fshelp_get_identity when creating a shadow root