@@ -487,7 +487,7 @@ void diskfs_shutdown_pager ();
 
 /* The user must define this function.  Return a memory object port (send
    right) for the file contents of NP.  PROT is the maximum allowable
-   access.  */
+   access.  On errors, return MACH_PORT_NULL and set errno.  */
 mach_port_t diskfs_get_filemap (struct node *np, vm_prot_t prot);
 
 /* The user must define this function.  Return true if there are pager
