@@ -1,5 +1,5 @@
 /*
-   Copyright (C) 1994, 1995, 1996 Free Software Foundation
+   Copyright (C) 1994, 1995, 1996, 1997 Free Software Foundation
 
    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License as
@@ -50,6 +50,9 @@ _diskfs_rdwr_internal (struct node *np,
     }
 
   memobj = diskfs_get_filemap (np, prot);
+
+  if (memobj == MACH_PORT_NULL)
+    return errno;
 
   err = pager_memcpy (diskfs_get_filemap_pager_struct (np), memobj,
 		      offset, data, amt, prot);
